chore(labeler): fix config
Signed-off-by: unusualpseudo <hatimahadri@proton.me>

--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,5 +1,7 @@
 ---
 ansible:
-  - "ansible/**/*"
+  - changed-files:
+      - any-glob-to-any-file: "ansible/**/*"
 github-actions:
-  - ".github/**/*"
+  - changed-files:
+      - any-glob-to-any-file: ".github/**/*"
