feature(k3s): add install and nuke plays
Signed-off-by: unusualpseudo <hatimahadri@proton.me>

--- a/.taskfiles/K3STasks.yaml
+++ b/.taskfiles/K3STasks.yaml
@@ -6,15 +6,14 @@ vars:
 
 tasks:
 
-  setup:
-    desc: Install nas
+  install:
+    desc: Install K3s
     dir: "{{.ANSIBLE_PLAYBOOK_DIR}}"
     cmds:
-      - ansible-playbook nas/install.yaml
-
+      - ansible-playbook k3s/install.yaml
 
   nuke:
-    desc: Nuke nas
+    desc: Nuke K3s
     dir: "{{.ANSIBLE_PLAYBOOK_DIR}}"
     cmds:
-      - ansible-playbook nas/nuke.yaml
+      - ansible-playbook k3s/nuke.yaml
