--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -11,3 +11,6 @@ kubernetes:
           ansible_host: 192.168.1.49
         rift:
           ansible_host: 192.168.1.50
+    storage:
+      hosts:
+        apex:
