--- a/ansible/playbooks/nas/install.yaml
+++ b/ansible/playbooks/nas/install.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Setup NAS
-  hosts: apex
+  hosts: storage
   become: true
   gather_facts: true
   any_errors_fatal: true
@@ -10,7 +10,7 @@
       apt:
         name: "{{ item }}"
         state: present
-      with_items: "{{ nas_apt_install_packages }}"
+      with_items: "{{ apt_install_packages }}"
 
     - name: Check if disk device is available
       stat:
@@ -72,3 +72,10 @@
     - name: Show ZFS pool status
       debug:
         msg: "{{ zpool_status.stdout }}"
+
+    - name: Restart NFS service
+      ansible.builtin.systemd:
+        name: nfs-kernel-server
+        daemon_reload: true
+        enabled: true
+        state: restarted
