--- a/ansible/roles/os/tasks/fs.yaml
+++ b/ansible/roles/os/tasks/fs.yaml
@@ -19,7 +19,7 @@
     state: absent
   loop: ["none", "swap"]
 
-- name: System Configuration | Sysctl
+- name: File System | Sysctl
   ansible.posix.sysctl:
     name: "{{ item.key }}"
     value: "{{ item.value }}"
@@ -33,3 +33,12 @@
       fs.inotify.max_user_instances: 8192
       net.core.rmem_max: 2500000
       net.core.wmem_max: 2500000
+
+
+- name: NFS | Set global mount options
+  ansible.builtin.copy:
+    src: files/nfsmount.conf
+    dest: /etc/nfsmount.conf
+    owner: root
+    group: root
+    mode: "0644"
