--- a/ansible/playbooks/k3s/tasks/kubeconfig.yaml
+++ b/ansible/playbooks/k3s/tasks/kubeconfig.yaml
@@ -15,7 +15,7 @@
       when: k3s_control_node
       ansible.builtin.fetch:
         src: /etc/rancher/k3s/k3s.yaml
-        dest: "{{ repository_path }}/kubeconfig"
+        dest: "{{ repository_path.stdout }}/kubeconfig"
         flat: true
 
     - name: Kubeconfig | Update kubeconfig with the correct load balancer address
@@ -23,6 +23,6 @@
       become: false
       run_once: true
       ansible.builtin.replace:
-        path: "{{ repository_path }}/kubeconfig"
+        path: "{{ repository_path.stdout }}/kubeconfig"
         regexp: https://127.0.0.1:6443
         replace: "https://{{ k3s_registration_address }}:6443"
