--- a/ansible/playbooks/k3s/install.yaml
+++ b/ansible/playbooks/k3s/install.yaml
@@ -12,6 +12,24 @@
         seconds: 2
 
   tasks:
+    - name: Check if k3s is installed
+      ansible.builtin.stat:
+        path: /etc/rancher/k3s/config.yaml
+      register: k3s_check_installed
+      check_mode: false
+
+    - name: Ignore manifests templates and urls if the cluster is already installed
+      ansible.builtin.set_fact:
+        k3s_server_manifests_templates: []
+        k3s_server_manifests_urls: []
+      when: k3s_check_installed.stat.exists
+
+    - name: Install Kubernetes
+      ansible.builtin.include_role:
+        name: xanmanning.k3s
+        public: true
+      vars:
+        k3s_state: installed
 
     - name: Kubeconfig
       ansible.builtin.include_tasks: tasks/kubeconfig.yaml
@@ -31,15 +49,20 @@
           namespace: tigera-operator
         - kind: Installation
           name: default
+        - kind: DaemonSet
+          name: kube-vip
+          namespace: kube-system
       register: resource_check
       when:
         - k3s_server_manifests_templates | length > 0
           or k3s_server_manifests_urls | length > 0
         - k3s_control_node is defined
         - k3s_control_node
+
     - name: Cruft
       when: k3s_control_node
       ansible.builtin.include_tasks: tasks/cruft.yaml
+
     - name: Stale contrainers
       ansible.builtin.include_tasks: tasks/stale_containers.yaml
       vars:
