--- a/ansible/playbooks/k3s/nuke.yaml
+++ b/ansible/playbooks/k3s/nuke.yaml
@@ -1,8 +1,7 @@
 ---
 - name: K3s Cluster Nuke
   hosts:
-    - master
-    - worker
+    - kubernetes
   any_errors_fatal: true
   become: true
   gather_facts: true
@@ -35,28 +34,15 @@
           kubernetes.core.k8s_drain:
             name: "{{ inventory_hostname }}"
             kubeconfig: /etc/rancher/k3s/k3s.yaml
-            state: cordon #unschedulable
+            state: cordon  # unschedulable
           delegate_to: "{{ groups['controller'][0] }}"
-
-    - name: Drain nodes
-      kubernetes.core.k8s_drain:
-        name: "{{ inventory_hostname }}"
-        kubeconfig: /etc/rancher/k3s/k3s.yaml
-        state: drain
-        delete_options:
-          delete_emptydir_data: true
-          ignore_daemonsets: true
-          terminate_grace_period: 60
-          wait_timeout: 90
-        pod_selectors:
-      delegate_to: "{{ groups['controller'][0] }}"
 
     - name: Stop k3s
       ansible.builtin.include_role:
         name: xanmanning.k3s
         public: true
       vars:
-        k3s_state: stopped
+        k3s_state: uninstalled
 
     - name: Networking | Delete CNI directory
       ansible.builtin.file:
@@ -76,32 +62,6 @@
         ip_version: ipv6
       loop: ["filter", "nat", "mangle", "raw"]
 
-    - name: Check to see if k3s-killall.sh exits
-      ansible.builtin.stat:
-        path: /usr/local/bin/k3s-killall.sh
-      register: check_k3s_killall_script
-
-    - name: Check to see if k3s-uninstall.sh exits
-      ansible.builtin.stat:
-        path: /usr/local/bin/k3s-uninstall.sh
-      register: check_k3s_uninstall_script
-
-    - name: Run k3s-killall.sh
-      when: check_k3s_killall_script.stat.exists
-      ansible.builtin.command:
-        cmd: /usr/local/bin/k3s-killall.sh
-      register: k3s_killall
-      changed_when: k3s_killall.rc == 0
-
-    - name: Run k3s-uninstall.sh
-      when: check_k3s_uninstall_script.stat.exists
-      ansible.builtin.command:
-        cmd: /usr/local/bin/k3s-uninstall.sh
-      args:
-        removes: /usr/local/bin/k3s-uninstall.sh
-      register: k3s_uninstall
-      changed_when: k3s_uninstall.rc == 0
-
     - name: Ensure hard links are removed
       when:
         - k3s_install_hard_links
@@ -111,11 +71,12 @@
         state: absent
       loop: ["kubectl", "crictl", "ctr"]
 
-    - name: Wipe longhorn data folder
+    - name: Delete extra files
       ansible.builtin.file:
-        path: "{{ longhorn_data_folder }}"
+        path: '{{ item }}'
         state: absent
-      when: longhorn_data_folder is defined
+      with_items:
+        - $HOME/.rancher
 
     - name: Stale Containers
       ansible.builtin.include_tasks: tasks/stale_containers.yaml
