--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,8 +16,7 @@ vars_plugins_enabled = host_group_vars,community.sops.sops
 log_path = ~/ansible.log
 remote_tmp = /tmp/${USER}/.ansible
 local_tmp = /tmp/${USER}/.ansible
-inventory = ./inventory
-roles_path = ~/.ansible/roles:./roles
+roles_path = ~/.ansible/roles
 collections_path = ~/.ansible/collections
 retry_files_enabled = False
 ansible_python_interpreter= /usr/bin/python3
