--- a/ansible/main/inventory/group_vars/controller/main.yaml
+++ b/ansible/main/inventory/group_vars/controller/main.yaml
@@ -15,7 +15,8 @@ k3s_server:
     - metrics-server                  # installed with Flux
     - servicelb                       # replaced with MetalLB Helm Chart
     - traefik                         # replaced with ingress-nginx Helm Chart
-    - local-storage
+    - local-storage                   # replaced with EBS
+    - coredns                          # replaced with Coredns Helm Chart
   etcd-disable-snapshots: true
   etcd-expose-metrics: true           # Required to monitor etcd with kube-prometheus-stack
 
@@ -24,7 +25,7 @@ k3s_server:
   disable-network-policy: true
   disable-cloud-controller: true
   disable-kube-proxy: false
-  disable-helm-controller: true
+  disable-helm-controller: false
 
   cluster-cidr: "{{ k3s_cluster_cidr }}"
   service-cidr: "{{ k3s_service_cidr }}"
