--- a/ansible/main/inventory/group_vars/kubernetes/main.yaml
+++ b/ansible/main/inventory/group_vars/kubernetes/main.yaml
@@ -10,9 +10,10 @@ k3s_cluster_cidr: 10.42.0.0/16
 # Network CIDR to use for service IPs
 k3s_service_cidr: 10.43.0.0/16
 k3s_server_manifests_templates:
-  - calico-installation.yaml.j2
-  - kube-vip-daemonset.yaml.j2
-  - kube-vip-rbac.yaml.j2
+  - custom-calico-installation.yaml.j2
+  - custom-kube-vip-daemonset.yaml.j2
+  - custom-kube-vip-rbac.yaml.j2
+  - custom-coredns-helmchart.yaml.j2
 # /var/lib/rancher/k3s/server/manifests
 k3s_server_manifests_urls:
   - url: https://raw.githubusercontent.com/projectcalico/calico/v3.28.0/manifests/tigera-operator.yaml
