--- a/ansible/main/playbooks/kubernetes/tasks/kubeconfig.yaml
+++ b/ansible/main/playbooks/kubernetes/tasks/kubeconfig.yaml
@@ -15,7 +15,7 @@
       when: k3s_control_node
       ansible.builtin.fetch:
         src: /etc/rancher/k3s/k3s.yaml
-        dest: "{{ repository_path.stdout }}/kubeconfig"
+        dest: "{{ repository_path.stdout }}/ansible/main/kubeconfig"
         flat: true
 
     - name: Kubeconfig | Update kubeconfig with the correct load balancer address
@@ -23,6 +23,15 @@
       become: false
       run_once: true
       ansible.builtin.replace:
-        path: "{{ repository_path.stdout }}/kubeconfig"
+        path: "{{ repository_path.stdout }}/ansible/main/kubeconfig"
         regexp: https://127.0.0.1:6443
         replace: "https://{{ k3s_registration_address }}:6443"
+
+    - name: Kubeconfig | Update kubeconfig with the correct context
+      delegate_to: localhost
+      become: false
+      run_once: true
+      ansible.builtin.replace:
+        path: "{{ repository_path.stdout }}/ansible/main/kubeconfig"
+        regexp: default
+        replace: main
