--- a/ansible/main/roles/os/tasks/packages.yaml
+++ b/ansible/main/roles/os/tasks/packages.yaml
@@ -28,3 +28,13 @@
     - apt_remove_packages is defined
     - apt_remove_packages is iterable
     - apt_remove_packages | length > 0
+
+- name: Install pip packages from list
+  pip:
+    name: "{{ pip_packages }}"
+    state: present
+    executable: pip
+  when:
+    - pip_packages is defined
+    - pip_packages is iterable
+    - pip_packages | length > 0
