--- a/ansible/main/roles/os/tasks/network.yaml
+++ b/ansible/main/roles/os/tasks/network.yaml
@@ -1,28 +1,42 @@
 ---
-- name: Network Configuration | Update hostname
-  hostname:
-    name: "{{ inventory_hostname }}"
+- name: Network Configuration
+  block:
+    - name: Network Configuration | Update hostname
+      hostname:
+        name: "{{ inventory_hostname }}"
 
+    - name: Network Configuration | Update /etc/hosts to include hostname
+      blockinfile:
+        path: /etc/hosts
+        block: |
+          127.0.1.1 {{ inventory_hostname }}
 
-- name: Network Configuration | Update /etc/hosts to include hostname
-  blockinfile:
-    path: /etc/hosts
-    block: |
-      127.0.1.1 {{ inventory_hostname }}
+    - name: Network Configuration | Set sysctls
+      when: inventory_hostname in groups['kubernetes']
+      ansible.posix.sysctl:
+        name: "{{ item.key }}"
+        value: "{{ item.value }}"
+        sysctl_file: /etc/sysctl.d/99-kubernetes.conf
+        reload: true
+      with_dict: "{{ sysctl_config }}"
+      vars:
+        sysctl_config:
+          net.ipv4.ip_forward: 1
+          net.ipv4.conf.all.forwarding: 1
+          net.ipv4.conf.all.rp_filter: 0
+          net.ipv4.conf.default.rp_filter: 0
+          net.ipv6.conf.all.forwarding: 1
+          net.bridge.bridge-nf-call-iptables: 1
+          net.bridge.bridge-nf-call-ip6tables: 1
 
-- name: Network Configuration | Set sysctls
-  ansible.posix.sysctl:
-    name: "{{ item.key }}"
-    value: "{{ item.value }}"
-    sysctl_file: /etc/sysctl.d/99-kubernetes.conf
-    reload: true
-  with_dict: "{{ sysctl_config }}"
-  vars:
-    sysctl_config:
-      net.ipv4.ip_forward: 1
-      net.ipv4.conf.all.forwarding: 1
-      net.ipv4.conf.all.rp_filter: 0
-      net.ipv4.conf.default.rp_filter: 0
-      net.ipv6.conf.all.forwarding: 1
-      net.bridge.bridge-nf-call-iptables: 1
-      net.bridge.bridge-nf-call-ip6tables: 1
+    - name: Disable systemd-resolved service
+      when: inventory_hostname in groups['dnsserver']
+      ansible.builtin.systemd:
+        name: systemd-resolved
+        enabled: no
+
+    - name: Stop systemd-resolved service
+      when: inventory_hostname in groups['dnsserver']
+      ansible.builtin.systemd:
+        name: systemd-resolved
+        state: stopped
