--- a/ansible/main/playbooks/dnsserver/pihole/compose.yml
+++ b/ansible/main/playbooks/dnsserver/pihole/compose.yml
@@ -12,7 +12,7 @@ services:
 
   pihole:
     container_name: pihole
-    image: pihole/pihole:latest
+    image: pihole/pihole:2024.07.0
     depends_on:
       - sops
     ports:
