--- a/ansible/main/roles/os/tasks/main.yml
+++ b/ansible/main/roles/os/tasks/main.yml
@@ -4,6 +4,7 @@
 - include_tasks: fs.yaml
   when: inventory_hostname in groups['kubernetes']
 - import_tasks: network.yaml
+- import_tasks: dns.yaml
 - import_tasks: nfs.yaml
 - import_tasks: ntp.yaml
 - import_tasks: firewall.yaml
