fix(resolv,ansible): add localhost to resolv.conf and fix property injection issue on group_vars
Signed-off-by: unusualpseudo <hatimahadri@proton.me>

--- a/ansible/main/inventory/group_vars/storage/main.yaml
+++ b/ansible/main/inventory/group_vars/storage/main.yaml
@@ -12,8 +12,7 @@ gid: 442
 
 nfs_options: "no_subtree_check,all_squash,anonuid={{uid}},anongid={{gid}},rw=@{{nodes_cidr}}"
 
-
-apt_install_packages:
+storage_required_packages_list:
   - zfs-zed
   - zfsutils-linux
   - nfs-kernel-server
