--- a/ansible/main/inventory/group_vars/kubernetes/main.yaml
+++ b/ansible/main/inventory/group_vars/kubernetes/main.yaml
@@ -1,10 +1,51 @@
 ---
+apt_install_packages:
+  - vim
+  - curl
+  - wget
+  - nano
+  - apt-transport-https
+  - ca-certificates
+  - software-properties-common
+  - net-tools
+  - gdisk
+  - fdisk
+  - htop
+  - unzip
+  - arptables
+  - lvm2
+  - nfs-common
+  - open-iscsi
+  - software-properties-common
+  - unzip
+  - dnsutils
+  - iputils-ping
+  - python3-kubernetes
+  - python3-yaml
+
+pip_packages: []
+
+apt_remove_packages:
+  - ufw
+  - unattended-upgrades
+  - apparmor
+
+timezone: "Europe/Paris"
+# Add cloudflare ntp server
+ntp_servers:
+  primary:
+    - "time.cloudflare.com"
+  fallback:
+    - "0.us.pool.ntp.org"
+    - "1.us.pool.ntp.org"
+    - "2.us.pool.ntp.org"
+
 k3s_release_version: "v1.30.3+k3s1"
 k3s_install_hard_links: true
 k3s_etcd_datastore: true
 k3s_become: true
 k3s_debug: false
-k3s_registration_address: "192.168.1.55"
+k3s_registration_address: "192.168.1.103"
 k3s_cluster_cidr: "10.42.0.0/16"
 k3s_service_cidr: "10.43.0.0/16"
 k3s_server_manifests_templates:
