fix(packages): remove pip install task
Signed-off-by: unusualpseudo <hatimahadri@proton.me>

--- a/ansible/main/inventory/group_vars/dnsserver/main.yaml
+++ b/ansible/main/inventory/group_vars/dnsserver/main.yaml
@@ -16,9 +16,7 @@ apt_install_packages:
   - unzip
   - dnsutils
   - iputils-ping
-
-pip_packages:
-  - docker
+  - python3-docker
 
 apt_remove_packages:
   - ufw
